# openarm_can

./: CMakeLists.txt  OpenArmCANConfig.cmake.in  README.md
dev/: LILIO_CONTROLLER.md
include/openarm/controller/: dual_openarm_controller.hpp  dynamics.hpp  kdl_parser_compat.hpp  openarm_controller.hpp
include/openarm/damiao_motor/: dm_motor.hpp  dm_motor_control.hpp  dm_motor_device_collection.hpp
python/: README.md
python/openarm_can/: __init__.py
python/src/: openarm_can.cpp
src/openarm/controller/: dual_openarm_controller.cpp  dynamics.cpp  kdl_parser_compat.cpp  openarm_controller.cpp
src/openarm/damiao_motor/: dm_motor_device_collection.cpp
