# Copyright 2025 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.22)
project(openarm_can VERSION 1.2.9)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Testing support
include(CTest)

include(GNUInstallDirs)

# ── Controller dependencies (KDL, URDF, Eigen) ───────────────────────────────
find_package(orocos_kdl REQUIRED)
find_package(kdl_parser REQUIRED)
find_package(urdfdom REQUIRED)
find_package(Eigen3 REQUIRED NO_MODULE)

# Create the main library
add_library(
  openarm_can
  src/openarm/can/socket/arm_component.cpp
  src/openarm/can/socket/gripper_component.cpp
  src/openarm/can/socket/openarm.cpp
  src/openarm/canbus/can_device_collection.cpp
  src/openarm/canbus/can_socket.cpp
  src/openarm/damiao_motor/dm_motor.cpp
  src/openarm/damiao_motor/dm_motor_control.cpp
  src/openarm/damiao_motor/dm_motor_device.cpp
  src/openarm/damiao_motor/dm_motor_device_collection.cpp
  src/openarm/controller/dynamics.cpp
  src/openarm/controller/openarm_controller.cpp
  src/openarm/controller/dual_openarm_controller.cpp)
set_target_properties(
  openarm_can
  PROPERTIES POSITION_INDEPENDENT_CODE ON
             VERSION ${PROJECT_VERSION}
             SOVERSION ${PROJECT_VERSION_MAJOR})
if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.23)
  target_sources(
    openarm_can
    PUBLIC FILE_SET
           HEADERS
           TYPE
           HEADERS
           BASE_DIRS
           include
           FILES
           include/openarm/can/socket/arm_component.hpp
           include/openarm/can/socket/gripper_component.hpp
           include/openarm/can/socket/openarm.hpp
           include/openarm/canbus/can_device.hpp
           include/openarm/canbus/can_device_collection.hpp
           include/openarm/canbus/can_socket.hpp
           include/openarm/damiao_motor/dm_motor.hpp
           include/openarm/damiao_motor/dm_motor_constants.hpp
           include/openarm/damiao_motor/dm_motor_control.hpp
           include/openarm/damiao_motor/dm_motor_device.hpp
           include/openarm/damiao_motor/dm_motor_device_collection.hpp
           include/openarm/controller/dynamics.hpp
           include/openarm/controller/openarm_controller.hpp
           include/openarm/controller/dual_openarm_controller.hpp)
  install(
    TARGETS openarm_can
    EXPORT openarm_can_export
    FILE_SET HEADERS)
else()
  target_include_directories(
    openarm_can PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                       $<INSTALL_INTERFACE:include>)
  install(TARGETS openarm_can EXPORT openarm_can_export)
  install(DIRECTORY include/openarm TYPE INCLUDE)
endif()

target_link_libraries(
  openarm_can
  PUBLIC orocos-kdl
         kdl_parser
         urdfdom_model
         Eigen3::Eigen)

# CMake package
set(INSTALL_CMAKE_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/OpenArmCAN)
install(
  EXPORT openarm_can_export
  DESTINATION ${INSTALL_CMAKE_DIR}
  NAMESPACE OpenArmCAN::
  FILE OpenArmCANTargets.cmake)
include(CMakePackageConfigHelpers)
configure_package_config_file(
  OpenArmCANConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/OpenArmCANConfig.cmake
  INSTALL_DESTINATION ${INSTALL_CMAKE_DIR})
write_basic_package_version_file(
  ${CMAKE_CURRENT_BINARY_DIR}/OpenArmCANConfigVersion.cmake
  VERSION ${PROJECT_VERSION}
  COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/OpenArmCANConfig.cmake
              ${CMAKE_CURRENT_BINARY_DIR}/OpenArmCANConfigVersion.cmake
        DESTINATION ${INSTALL_CMAKE_DIR})

# pkg-config package
if(IS_ABSOLUTE "${CMAKE_INSTALL_INCLUDEDIR}")
  set(PKG_CONFIG_INCLUDEDIR "${CMAKE_INSTALL_INCLUDEDIR}")
else()
  set(PKG_CONFIG_INCLUDEDIR "\${prefix}/${CMAKE_INSTALL_INCLUDEDIR}")
endif()
if(IS_ABSOLUTE "${CMAKE_INSTALL_LIBDIR}")
  set(PKG_CONFIG_LIBDIR "${CMAKE_INSTALL_LIBDIR}")
else()
  set(PKG_CONFIG_LIBDIR "\${prefix}/${CMAKE_INSTALL_LIBDIR}")
endif()
configure_file(openarm-can.pc.in ${CMAKE_CURRENT_BINARY_DIR}/openarm-can.pc
               @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/openarm-can.pc
        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)

add_executable(openarm-can-motor-sampling-check setup/motor_sampling_check.cpp)
target_link_libraries(openarm-can-motor-sampling-check openarm_can)
install(TARGETS openarm-can-motor-sampling-check
        DESTINATION ${CMAKE_INSTALL_BINDIR})

# Add motor control example executable
add_executable(openarm-can-demo examples/demo.cpp)
target_link_libraries(openarm-can-demo openarm_can)
install(TARGETS openarm-can-demo DESTINATION ${CMAKE_INSTALL_BINDIR})

# ==============================================================================
# OpenArm Unified CLI Tool (openarm-can)
# ==============================================================================
find_package(CLI11 REQUIRED)
add_executable(
  openarm-can-cli
  setup/cli/openarm_cli.cpp
  setup/cli/commands/can_configure_commands.cpp
  setup/cli/commands/motor_statas_commands.cpp
  setup/cli/commands/change_motor_baudrate_commands.cpp
  setup/cli/commands/zero_position_commands.cpp
  setup/cli/commands/motor_read_param_commands.cpp
  setup/cli/commands/monitor_motor_status_commands.cpp
  setup/cli/commands/discover_motor_commands.cpp
  setup/cli/commands/change_motor_id_commands.cpp
  setup/cli/commands/write_motor_param_commands.cpp
  setup/cli/commands/clear_error_commands.cpp)
target_include_directories(
  openarm-can-cli PRIVATE setup/cli ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(openarm-can-cli PRIVATE openarm_can CLI11::CLI11)
install(TARGETS openarm-can-cli DESTINATION ${CMAKE_INSTALL_BINDIR})

# Install scripts
install(PROGRAMS setup/openarm-can-configure-socketcan-4-arms
                 setup/openarm-can-zero-position-calibration
        DESTINATION ${CMAKE_INSTALL_BINDIR})

# Install bash completion
install(
  FILES setup/openarm-can-cli.bash
  DESTINATION ${CMAKE_INSTALL_DATADIR}/bash-completion/completions
  RENAME openarm-can-cli)

# Add tests
if(BUILD_TESTING)
  # add_subdirectory(test)
endif()
